Customizing git and tmux config

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -13,6 +13,8 @@ bind-key ^D detach-client
 # Create splits and vertical splits
 bind-key v split-window -h
 bind-key ^V split-window -h
+bind-key | split-window -h
+bind-key - split-window
 bind-key s split-window
 bind-key ^S split-window
 
@@ -22,6 +24,30 @@ bind-key J resize-pane -D
 bind-key K resize-pane -U
 bind-key H resize-pane -L
 bind-key L resize-pane -R
+
+# Pane selection
+bind-key h select-pane -L
+bind-key j select-pane -D
+bind-key k select-pane -U
+bind-key l select-pane -R
+
+# Use Alt-vim keys without prefix key to switch panes
+bind -n M-h select-pane -L
+bind -n M-j select-pane -D 
+bind -n M-k select-pane -U
+bind -n M-l select-pane -R
+ 
+# Use Alt-arrow keys without prefix key to resize panes
+bind -n M-Left resize-pane -L
+bind -n M-Right resize-pane -R
+bind -n M-Up resize-pane -U
+bind -n M-Down resize-pane -D
+ 
+# Shift arrow to switch windows
+bind -n S-Left  previous-window
+bind -n S-Right next-window
+
+
 
 # Use vi keybindings for tmux commandline input.
 # Note that to get command mode you need to hit ESC twice...
@@ -72,3 +98,8 @@ bind C-a last-window
 # Bigger history
 set -g history-limit 10000
 #
+
+# Mouse behavior
+setw -g mode-mouse on
+set -g mouse-select-pane on
+set -g mouse-resize-pane on
