--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -4,10 +4,16 @@ set -g bell-action any
 # Default termtype. If the rcfile sets $TERM, that overrides this value.
 set -g default-terminal screen-256color
 # set -g default-terminal "screen-256color"
-#
-set-option -g default-command "reattach-to-user-namespace -l $SHELL -l"
 
+# Setup 'v' to begin selection as in Vim
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+
+# Update default binding of `Enter` to also use copy-pipe
+unbind -t vi-copy Enter
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 # Keep your finger on ctrl, or don't
+
 bind-key ^D detach-client
 
 # Create splits and vertical splits
@@ -46,8 +52,6 @@ bind -n M-Down resize-pane -D
 # Shift arrow to switch windows
 bind -n S-Left  previous-window
 bind -n S-Right next-window
-
-
 
 # Use vi keybindings for tmux commandline input.
 # Note that to get command mode you need to hit ESC twice...
